# Findora

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
loadtests/: locustfile.py
src/: main.py
src/api/routes/: __init__.py  products.py  search.py
src/config/: settings.py
src/core/: __init__.py  cache.py  exceptions.py  logging.py  metrics.py  rate_limit.py
src/elastic/: __init__.py  client.py  index_manager.py  mappings.py
src/models/: __init__.py  product.py
src/services/: __init__.py  indexing.py  search.py
src/utils/: __init__.py  seeder.py
tests/: conftest.py
tests/e2e/: conftest.py  test_search_flow.py
tests/integration/: test_health.py  test_indexing_api.py  test_main.py  test_metrics.py  test_search_api.py
tests/unit/: test_cache.py  test_connection_retry.py  test_elastic_client.py  test_exceptions.py  test_index_manager.py  test_indexing_service.py  test_logging.py  test_mappings.py  test_metrics.py  test_models.py  test_rate_limit.py  test_search_service.py  test_seeder.py  test_settings.py
